welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: value ! is not a member of Int
	while (getY() ! = getMondeHauteur() - 1 && getX() ! = getMondeLargeur() - 1)
                      ^